add github links

--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,7 +1,7 @@
 <div class="backdrop is-hidden" data-team-modal>
     <div class="team-modal__window">
         <div class="team-modal__close-btn">
-            <svg width="18" height="18">
+            <svg width="35" height="35">
                 <use href="/src/images/sprite.svg#icon-close"></use>
             </svg>
         </div>
@@ -12,7 +12,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Volodymyr Holotnyk</h3>
                     <p class="team-modal__photo-description" lang="en">Team Lead</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/Golotniks94">GitHub</a>
                 </div>
             </li>
 
@@ -21,7 +21,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Oleksandr Chernomorets</h3>
                     <p class="team-modal__photo-description" lang="en">Scrum Master</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/AlexanderChernomorets">GitHub</a>
                 </div>
             </li>
 
@@ -30,7 +30,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Sergii Bilogolovyi</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/Belik1989">GitHub</a>
                 </div>
             </li>
 
@@ -39,7 +39,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Inna Kukla</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/InnaKukla">GitHub</a>
                 </div>
             </li>
 
@@ -48,7 +48,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Viktor Solomianiy</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/ViktorSolomianiy">GitHub</a>
                 </div>
             </li>
 
@@ -57,7 +57,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Andrii Kostenko</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/Andruha0013">GitHub</a>
                 </div>
             </li>
 
@@ -75,7 +75,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Maksim Kozir</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/maxk3y">GitHub</a>
                 </div>
             </li>
 
@@ -84,7 +84,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Yuriy Rysak</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/YuriyRysak">GitHub</a>
                 </div>
             </li>
 
@@ -93,7 +93,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Olya Rozhniatovska</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/helgels">GitHub</a>
                 </div>
             </li>
 
