--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -66,7 +66,7 @@
                 <div class="team-modal__thumb">
                     <h3 class="team-modal__photo-title">Natalia Gerasymova</h3>
                     <p class="team-modal__photo-description" lang="en">Developer</p>
-                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
+                    <a class="team-modal__social-link" href="https://github.com/Natalii-ng">GitHub</a>
                 </div>
             </li>
 
