--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -49,11 +49,13 @@
             </ul>
         </nav>
         <div class="form-search__icon">
+          <form id="myForm">
                     <input type="search" id="name-input" class="form-search__input" placeholder="Movie search">
     
                 <span class="form-search__icon_icon"><svg widht="8px" height="8px" viewBox="0 0 100 100" aria-label="Search">
                     <use class="icon-search" href="/src/images/sprite.svg#icon-search-2"></use>
                 </svg></span>
+              </form>
                 </div>
         
     </header>
