--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -22,8 +22,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 280px;
-  height: 750px;
+  min-width: 280px;
+  height: 650px;
   transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #D7D4D4;
@@ -51,7 +51,6 @@
 }
 
 .team-modal__title {
-  margin-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -73,7 +72,8 @@
   margin-right: auto;
   margin-bottom: 10px;
   display: block;
-  border-radius: 5px; 
+  border-radius: 5px;
+  object-fit: cover; 
 }
 
 .team-modal__photo-title {
@@ -92,6 +92,12 @@
   display: block;
   text-align: center;
   margin-bottom: 10px;
+  color: #000000;
+}
+
+.team-modal__social-link:hover,
+.team-modal__social-link:focus {
+  color: #2196f3;
 }
 
 @media screen and (min-width: 768px) {
