--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -26,7 +26,7 @@
                     href="/src/library.html">Library</a></li>
         </ul>
     </nav>
-    <div class="header-lib__btn-wrap">
+    <div class="header-lib__btn-wrap header-lib">
         <button class="header-lib__btn header-lib__btn-watched header-lib__btn--current" id="watchedButton">Watched</button>
         <button class="header-lib__btn header-lib__btn-queue" id="queButton">Queue</button>
     </div>
