--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -26,9 +26,9 @@
                     href="/src/library.html">Library</a></li>
         </ul>
     </nav>
-    <div class="header-lib__btn-wrap header-lib">
-        <button class="header-lib__btn header-lib__btn-watched header-lib__btn--current" id="watchedButton">Watched</button>
-        <button class="header-lib__btn header-lib__btn-queue" id="queButton">Queue</button>
+    <div class="header-lib__btn-wrap">
+        <button class="header-lib__btn header-lib__btn-watched header-lib__btn--current" id="watchedButton" value="false">Watched</button>
+        <button class="header-lib__btn header-lib__btn-queue" id="queButton" value="false">Queue</button>
     </div>
 
 </header>
